src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Expected_Plan__c</fullName>
        <label>Expected Plan from Lead</label>
        <picklist>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <picklist>
            <picklistValues>
                <fullName>New to eCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experienced with eCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switching from a Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set up a new online business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switch from a different ecommerce platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add an online store to my brick-and-mortar business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loyal Bigcommerce client adding another store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set up a store for a client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;m doing research as a student, app developer or job applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start an online business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expand my online business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switch e-commerce platforms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add an online store to my offline business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Experiment__c</fullName>
        <label>Experiment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FTP_Notes__c</fullName>
        <description>FTP Notes from Sales Rep to Migration team for pre scoping</description>
        <inlineHelpText>FTP Notes from Sales Rep to Migration team for pre scoping</inlineHelpText>
        <label>FTP Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTP_Password__c</fullName>
        <description>Enrcypted FTP Password - populated by Sales Rep and used during Migration Pre-sale scoping process</description>
        <inlineHelpText>Enrcypted FTP Password - populated by Sales Rep and used during Migration Pre-sale scoping process</inlineHelpText>
        <label>FTP Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>FTP_Port__c</fullName>
        <description>FTP Port used for migration prescoping</description>
        <inlineHelpText>FTP Port used for migration prescoping</inlineHelpText>
        <label>FTP Port</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTP_URL__c</fullName>
        <description>What is the FTP URL of the prospect&apos;s current store?</description>
        <inlineHelpText>What is the FTP URL of the prospect&apos;s current store?</inlineHelpText>
        <label>FTP URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTP_Username__c</fullName>
        <description>FTP Username for migration prescoping</description>
        <inlineHelpText>FTP Username for migration prescoping</inlineHelpText>
        <label>FTP Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_List__c</fullName>
        <description>App Feature list</description>
        <inlineHelpText>App Feature list</inlineHelpText>
        <label>Feature List</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Featured_App__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a featured app?</description>
        <inlineHelpText>Is this a featured app?</inlineHelpText>
        <label>Featured App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fee_Range_High__c</fullName>
        <description>PRICING FIELD - data loaded in, this is NOT DYNAMIC</description>
        <inlineHelpText>PRICING FIELD - data loaded in, this is NOT DYNAMIC</inlineHelpText>
        <label>Fee Range High</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Range_Low__c</fullName>
        <description>PRICING FIELD - data loaded in, this is NOT DYNAMIC</description>
        <inlineHelpText>PRICING FIELD - data loaded in, this is NOT DYNAMIC</inlineHelpText>
        <label>Fee Range Low</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Client_ID__c</fullName>
        <formula>Account.gaClientID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GA Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Growth_Rate_Adjustment__c</fullName>
        <description>PRICING FIELD - data loaded in, this is NOT DYNAMIC</description>
        <inlineHelpText>PRICING FIELD - data loaded in, this is NOT DYNAMIC</inlineHelpText>
        <label>Growth Rate Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Has_Products__c</fullName>
        <description>Does the prospect have products?</description>
        <inlineHelpText>Does the prospect have products?</inlineHelpText>
        <label>Has Products?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_RV_Account__c</fullName>
        <formula>IF(NOT(ISBLANK(rvpe__RVAccount__c)),TRUE,FALSE)</formula>
        <label>Has RV Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_RV_Member__c</fullName>
        <formula>IF(NOT(ISBLANK( rvpe__RVMember__c )),TRUE,FALSE)</formula>
        <label>Has RV Member?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <description>How did the prospect hear about us?</description>
        <inlineHelpText>How did the prospect hear about us?</inlineHelpText>
        <label>How did you hear about us?</label>
        <picklist>
            <picklistValues>
                <fullName>Advertising (Internet Retailer, eCommerce Times)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google/Search Engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online publication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IP_State__c</fullName>
        <label>IP State</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indexed_SBD_Store_ID__c</fullName>
        <externalId>true</externalId>
        <label>Indexed SBD Store ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>Industry. Originally populated from trial sign up form. Rep can change. Picklist. Standard Salesforce field.</description>
        <inlineHelpText>Industry. Originally populated from trial sign up form. Rep can change. Picklist. Standard Salesforce field.</inlineHelpText>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Ad Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animals &amp; Pets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antiques and Collectibles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel &amp; Clothing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art &amp; Crafts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive &amp; Motorcross</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking &amp; Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer &amp; Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domain Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domain Registrar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gifts &amp; Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Beauty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &amp; Garden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jewelry &amp; Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_Submitter__c</fullName>
        <label>Initial Submitter</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Integrations_needed__c</fullName>
        <label>Integrations needed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsTrial__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsTrial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_a_tax_exempt_certificate_available__c</fullName>
        <label>zIs a tax exempt certificate available?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LDR_Lead_Rating__c</fullName>
        <description>What was the lead rating providing by the LDR?</description>
        <inlineHelpText>What was the lead rating providing by the LDR?</inlineHelpText>
        <label>LDR Lead Rating</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LandingPage__c</fullName>
        <label>MKT Landing Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Launch_Date__c</fullName>
        <description>Date that the store was launched by the enterprise team or professional services team</description>
        <inlineHelpText>Date that the store was launched by the enterprise  team or professional services team</inlineHelpText>
        <label>Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Launch_Status__c</fullName>
        <description>Has the store been launched by the enterprise account team or the professional service team?</description>
        <inlineHelpText>Has the store been launched by the enterprise account team or the professional service team?</inlineHelpText>
        <label>Launch Status</label>
        <picklist>
            <picklistValues>
                <fullName>Launched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlaunched</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Launch_Team_Commando__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Launch Team Commando</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date_Time__c</fullName>
        <description>When the lead was created</description>
        <inlineHelpText>When was the lead that created this opportunity created.</inlineHelpText>
        <label>Lead Created Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <formula>Contact__r.mkto2__Lead_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contact Lead Score</inlineHelpText>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <picklist>
            <controllingField>LeadSource</controllingField>
            <picklistValues>
                <fullName>Adam Seabrooke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admarketplace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdRoll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon Seller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Braintree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capterra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission Junction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datanyze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demandbase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecom Bytes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endicia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G2crowd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Shopping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Happy Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impact Radius</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instagram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Retailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intuit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LinkedIn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luncheon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meet-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <description>What type of lead was converted into this account and opportunity?</description>
        <inlineHelpText>What type of lead was converted into this account and opportunity?</inlineHelpText>
        <label>Lead Type</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limitations__c</fullName>
        <inlineHelpText>List any known limitations that were brought up that we don&apos;t have a solution for.</inlineHelpText>
        <label>Limitations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <description>Client&apos;s LinkedIn URL</description>
        <inlineHelpText>Client&apos;s LinkedIn URL</inlineHelpText>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MBAAccountID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is what MBA is sending</inlineHelpText>
        <label>MBA Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBAPartnerID__c</fullName>
        <label>MBA Partner ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBASubscriptionID__c</fullName>
        <externalId>true</externalId>
        <label>MBA Subscription ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBA_Account_ID__c</fullName>
        <formula>Account.MBAAccountID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the MBA Account ID on the Account</inlineHelpText>
        <label>BA MBA Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MKT_Case_Study__c</fullName>
        <description>Do we have a case study on this store?</description>
        <inlineHelpText>Do we have a case study on this store?</inlineHelpText>
        <label>MKT Case Study</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MKT_Friendly__c</fullName>
        <description>Is this a &quot;Friendly&quot; client, as designated by marketing?</description>
        <inlineHelpText>Is this a &quot;Friendly&quot; client, as designated by marketing?</inlineHelpText>
        <label>MKT Friendly :)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MKT_Showcase__c</fullName>
        <description>Is this store in our Marketing Showcase?</description>
        <inlineHelpText>Is this store in our Marketing Showcase?</inlineHelpText>
        <label>MKT Showcase</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MKT_Testimonial__c</fullName>
        <description>Is this store used in a marketing testimonial?</description>
        <inlineHelpText>Is this store used in a marketing testimonial?</inlineHelpText>
        <label>MKT Testimonial</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MRR_Change__c</fullName>
        <description>This opp amount - the store purchase opp&apos;s MRR</description>
        <formula>Amount -  ParentOpportunity__r.MonthlyRecurringRevenue__c</formula>
        <inlineHelpText>This opp amount - the store purchase opp&apos;s MRR - used for pricing</inlineHelpText>
        <label>MRR Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MarketingCampaign__c</fullName>
        <label>Marketing Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketingSource__c</fullName>
        <label>Marketing Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Content__c</fullName>
        <label>Marketing Content</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Keyword__c</fullName>
        <label>Marketing Keyword</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Medium__c</fullName>
        <label>Marketing Medium</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Price_Testing_Group__c</fullName>
        <description>Marketing Price Testing Group from Lead</description>
        <inlineHelpText>Marketing Price Testing Group from Lead</inlineHelpText>
        <label>Marketing Price Testing Group</label>
        <length>224</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Agreement_Date__c</fullName>
        <description>Date that the opportunity&apos;s master agreement is signed by both signers</description>
        <inlineHelpText>Date that the opportunity&apos;s master agreement is signed by both signers</inlineHelpText>
        <label>Master Agreement Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Merchant_Status__c</fullName>
        <description>Where is the merchant currently selling?</description>
        <inlineHelpText>Where is the merchant currently selling?</inlineHelpText>
        <label>zMerchant Status</label>
        <picklist>
            <picklistValues>
                <fullName>Brick and mortar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brick and mortar and online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple stores online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No store</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MigrationScopingConsultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who is scoping this opportunity pre-sale?</description>
        <inlineHelpText>Who is scoping this opportunity pre-sale?</inlineHelpText>
        <label>Migration Scoping Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_Budget__c</fullName>
        <description>Prospect&apos;s approximate budget for migration services</description>
        <inlineHelpText>Prospect&apos;s approximate budget for migration services</inlineHelpText>
        <label>Migration Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Migration_Closed_Lost_Reason__c</fullName>
        <description>Why did we chose not to migrate this prospect&apos;s store?</description>
        <inlineHelpText>Why did we chose not to migrate this prospect&apos;s store?</inlineHelpText>
        <label>Migration Closed Lost Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Cannot Meet Time Frame Required by Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a Supported Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot Meet Scope Required by Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More Cost Effective Using a 3rd Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doesn&apos;t Have Working Ecomm Store</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migration_Fee__c</fullName>
        <description>Migration fee determined during pre-sales migration scoping</description>
        <inlineHelpText>Migration fee determined during pre-sales migration scoping</inlineHelpText>
        <label>Migration Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Migration_Platform__c</fullName>
        <inlineHelpText>For Migration products only, this must be populated.</inlineHelpText>
        <label>Migration Platform</label>
        <picklist>
            <picklistValues>
                <fullName>3dCart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon Webstore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon Webstores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ayacart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bigcommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CoreCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CreateAShoppe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSCart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CubeCart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GoDaddy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interspire (standard SOW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lemon Stand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loaded Commerce (CRELoaded/OSCommerce)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magento/Magento CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magento Go</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mal&apos;s eCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miva Merchant V4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miva Merchant V5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OpenCart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OptionCart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OsMaxCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portable Shops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prostores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PureCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ShoppePro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shoppe Pro Ultimate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volusion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migration_Products__c</fullName>
        <description>Rollup summary of migration products. Used to determine migration count logic to send to Hubspot</description>
        <inlineHelpText>Rollup summary of migration products. Used to determine migration count logic to send to Hubspot</inlineHelpText>
        <label>BA: Migration Products</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Is_Migration__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Migration_Scope_of_Work__c</fullName>
        <description>Migration pre-sales scope of work description</description>
        <inlineHelpText>Migration pre-sales scope of work description</inlineHelpText>
        <label>Migration Scope of Work</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Migration_Scoping_Notes__c</fullName>
        <description>Migration Scoping Notes</description>
        <inlineHelpText>Migration Scoping Notes</inlineHelpText>
        <label>Migration Scoping Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Migration_Scoping_Status__c</fullName>
        <description>Migration team pre-sales scoping status - used to indicate whether the migration team will be able to migrate a prospect during the sales cycle</description>
        <inlineHelpText>Migration team pre-sales scoping status - used to indicate whether the migration team will be able to migrate a prospect during the sales cycle</inlineHelpText>
        <label>Migration Scoping Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recommended to a Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>